--- a/game/export_presets.cfg
+++ b/game/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="donutGame v1.0a"
+name="donutGame v1.0b"
 platform="Windows Desktop"
 runnable=true
 advanced_options=true
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../builds/donutGame1.0a.exe"
+export_path="../builds/donutGame1.0b.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
